fixed the failure of loading speech_logs

--- a/templates/speech_logs.html
+++ b/templates/speech_logs.html
@@ -78,7 +78,7 @@
 <body>
 
     <h1>Speech Logs</h1>
-    <a href="{{ url_for('speech_log_form') }}" class="add-link">Add New Speech Log</a>
+    <a href="{{ url_for('add_speech_log') }}" class="add-link">Add New Speech Log</a>
 
     <table>
         <thead>
