--- a/vpemaster/templates/contact_form.html
+++ b/vpemaster/templates/contact_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>{{ 'Edit Contact' if contact else 'Add New Contact' }}</h1>
-    <form method="POST" action="{{ url_for('contact_form', contact_id=contact.id) if contact else url_for('contact_form') }}">
+    <form method="POST" action="{{ url_for('contacts_bp.contact_form', contact_id=contact.id) if contact else url_for('contacts_bp.contact_form') }}">
         <table class="form-table">
             <tr>
                 <td><label for="name">Name:</label></td>
@@ -25,7 +25,7 @@
         </table>
         <div style="text-align: center;">
             <button type="submit" class="add-button">Save Contact</button>
-            <a href="{{ url_for('show_contacts') }}" class="button cancel-btn">Cancel</a>
+            <a href="{{ url_for('contacts_bp.show_contacts') }}" class="button cancel-btn">Cancel</a>
         </div>
     </form>
 {% endblock %}
