--- a/vpemaster/templates/login.html
+++ b/vpemaster/templates/login.html
@@ -19,7 +19,7 @@
                 </ul>
             {% endif %}
         {% endwith %}
-        <form action="{{ url_for('login') }}" method="post" class="login-form">
+        <form action="{{ url_for('main_bp.login') }}" method="post" class="login-form">
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
