--- a/vpemaster/templates/users.html
+++ b/vpemaster/templates/users.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>User Management</h1>
-    <a href="{{ url_for('user_form') }}" class="add-button">Add New User</a>
+    <a href="{{ url_for('users_bp.user_form') }}" class="add-button">Add New User</a>
 
     <table>
         <thead>
@@ -28,7 +28,7 @@
                 <td>{{ user.Role }}</td>
                 <td>{{ user.Date_Created.strftime('%Y-%m-%d') }}</td>
                 <td class="action-links">
-                    <a href="{{ url_for('user_form', user_id=user.id) }}" class="button">Edit</a>
+                    <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="button">Edit</a>
                     <button class="button delete-btn" onclick="showDeleteModal({{ user.id }})">Delete</button>
                 </td>
             </tr>
