added role-based access control

--- a/vpemaster/templates/agenda.html
+++ b/vpemaster/templates/agenda.html
@@ -8,7 +8,7 @@
     <div class="button-group">
         <form action="{{ url_for('agenda_bp.import_agenda_from_csv') }}" method="post" enctype="multipart/form-data" class="form-inline">
             <input type="file" name="file" id="agenda-file" style="display: none;" onchange="this.form.submit()">
-            <button type="button" class="add-button" onclick="document.getElementById('agenda-file').click()">Import Data</button>
+            <button type="button" class="add-button" onclick="document.getElementById('agenda-file').click()">Import from CSV</button>
         </form>
         <form action="{{ url_for('agenda_bp.export_agenda_to_csv') }}" method="get" class="form-inline">
             <button type="submit" class="add-button">Export to CSV</button>
