--- a/vpemaster/templates/base.html
+++ b/vpemaster/templates/base.html
@@ -28,12 +28,14 @@
                     <span>Meeting Agenda</span>
                 </a>
             </li>
+            {% if session.get('user_role') in ['Admin', 'Officer'] %}
             <li class="{% if request.endpoint and request.endpoint.startswith('contacts_bp') %}active{% endif %}">
                 <a href="{{ url_for('contacts_bp.show_contacts') }}">
                     <i class="fas fa-book nav-icon"></i>
                     <span>Contact Book</span>
                 </a>
             </li>
+            {% endif %}
             <li class="{% if request.endpoint and request.endpoint.startswith('speech_logs_bp') %}active{% endif %}">
                 <a href="{{ url_for('speech_logs_bp.show_speech_logs') }}">
                     <i class="fas fa-microphone nav-icon"></i>
