--- a/vpemaster/templates/speech_logs.html
+++ b/vpemaster/templates/speech_logs.html
@@ -4,23 +4,23 @@
 
 {% block content %}
     <h1>Speech Logs</h1>
-    <a href="{{ url_for('speech_logs_bp.add_speech_log') }}" class="add-button">Add New Speech Log</a>
+    <a href="{{ url_for('speech_logs_bp.speech_log_form') }}" class="add-button">Add New Speech Log</a>
 
     <table>
         <thead>
             <tr>
                 <th>Meeting Number</th>
                 <th>Meeting Date</th>
-                <th>Session</th>
-                <th>Speech Title</th>
-                <th>Pathway</th>
-                <th>Level</th>
+                <th>Meeting Session</th>
                 <th>Name</th>
+                <th>Project Code</th>
+                <th>Project Name</th>
+                <th>Speech Title</th>
                 <th>Evaluator</th>
-                <th>Project Title</th>
-                <th>Project Type</th>
-                <th>Project Status</th>
+                <th>Status</th>
+                {% if session.get('user_role') in ['Admin', 'Officer'] %}
                 <th>Action</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -33,13 +33,20 @@
                     {% endif %}
                 </td>
                 <td>{{ log.Session }}</td>
-                <td>{{ log.Speech_Title }}</td>
-                <td>{{ log.Pathway }}</td>
-                <td>{{ log.Level }}</td>
                 <td>{{ log.Name }}</td>
-                <td>{{ log.Evaluator }}</td>
+                <td>
+                    {% if log.Pathway and 'Non-Path' not in log.Pathway %}
+                        {# Create the acronym using a Jinja-safe for loop to avoid syntax errors #}
+                        {% set initials = [] %}
+                        {% for word in log.Pathway.split() %}
+                            {% if initials.append(word[0]) %}{% endif %}
+                        {% endfor %}
+                        {{ initials | join('') }}{{ log.Level }}
+                    {% endif %}
+                </td>
                 <td>{{ log.Project_Title }}</td>
-                <td>{% if log.Project_Type %}{{ log.Project_Type }}{% endif %}</td>
+                <td>{{ log.Speech_Title }}</td>
+                <td>{{ log.Evaluator }}</td>
                 <td>
                     {% if log.Project_Status == 'Completed' %}
                         <span class="completed-status">Completed</span>
@@ -49,16 +56,19 @@
                         </form>
                     {% endif %}
                 </td>
-                <td class="action-links">
-                    <a href="{{ url_for('speech_logs_bp.speech_log_form', log_id=log.id) }}" class="button">Edit</a>
-                    <button class="button delete-btn" onclick="showDeleteModal({{ log.id }})">Delete</button>
+                {% if session.get('user_role') in ['Admin', 'Officer'] %}
+                <td>
+                    <div class="action-links">
+                        <a href="{{ url_for('speech_logs_bp.speech_log_form', log_id=log.id) }}" class="button">Edit</a>
+                        <button class="button delete-btn" onclick="showDeleteModal({{ log.id }})">Delete</button>
+                    </div>
                 </td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <!-- The Delete Confirmation Modal -->
     <div id="deleteModal" class="modal">
         <div class="modal-content">
             <p>Are you sure you want to delete this speech log?</p>
